--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   database:
     container_name: database
@@ -17,6 +15,8 @@ services:
   airflow-init:
     container_name: airflow-init
     hostname: airflow-init
+    build:
+      context: .
     image: apache/airflow:2.3.0
     env_file:
       - ./airflow/.env
@@ -38,6 +38,8 @@ services:
   airflow-webserver:
     container_name: airflow-webserver
     hostname: airflow-webserver
+    build:
+      context: .
     image: apache/airflow:2.3.0
     depends_on:
       - airflow-init
@@ -58,6 +60,8 @@ services:
   airflow-scheduler:
     container_name: airflow-scheduler
     hostname: airflow-scheduler
+    build:
+      context: .
     image: apache/airflow:2.3.0
     depends_on:
       - airflow-webserver
